Update Purchase Handbook Page to Reflect Q1 OKR

--- a/development/fulfillment/purchase/index.html.md.erb
+++ b/development/fulfillment/purchase/index.html.md.erb
@@ -49,3 +49,9 @@ If you refine an issue suitable for ~onboarding, please make sure that descripti
 
 ### Focus on Deliverable issues
 Issues with the Deliverable label assigned to the current Milestone are considered the most vital to the Milestone success. The focus should be on completing these issues ahead of non-deliverable issues. At 7 business days remaining in the Milestone, evaluation of the status of Deliverable issues should be completed by the Engineering Manager. If completion of one or more Deliverable issues is in jeopardy, the Engineering Manager should evaluate if adding more Engineers to those issues will help ensure their completion before the end of the Milestone. If so, multiple Engineers should be assigned to Deliverable issues.
+
+### Definition of Ready
+Objective of these templates is to have a templated approach to defining criteria needed before refinement can start. More specifically: when is problem & solution & design complete.
+1. [Feature development use case](https://gitlab.com/gitlab-org/gitlab/-/issues/386055): where we go through full problem/design/solution stages
+2. [Bug investigation use case](https://gitlab.com/gitlab-org/fulfillment-meta/-/issues/985): we have discovered a bug and need to figure out the root cause.
+3. [Eng driven development use case](https://gitlab.com/gitlab-org/gitlab/-/issues/386056): hen engineering is leading (typically straight forward, simple use cases where engg wrote up the issue, proposal, fix) but engg needs confirmation this solution can be executed upon
