--- a/support/workflows/gitlab-com_overview.html.md.erb
+++ b/support/workflows/gitlab-com_overview.html.md.erb
@@ -23,6 +23,8 @@ GitLab.com is the largest known GitLab instance. It is monitored and maintained 
 
 The Support team should have a general understanding of [its architecture](https://about.gitlab.com/handbook/engineering/infrastructure/production/architecture/) along with how to access logs ([Kibana](kibana.html)) and error reports ([Sentry](sentry.html)) to troubleshoot reported issues.
 
+As well, Support team members should be aware that Gitlab.com has certain customizations. These customization are applied through the [chef-repo](https://gitlab.com/gitlab-com/gl-infra/chef-repo). Details of Gitlab.com customizatons can be found in [GitLab.com custom limits](/handbook/support/workflows/gitlab-com_customizations.html)
+
 Numerous Support team members including all SaaS focused ones also assist with incidents as [CMOC](cmoc_workflows.html).
 
 ## Legal Context
