Clarify the definition of "Enterprise User"

--- a/support/workflows/gitlab-com_overview.html.md.erb
+++ b/support/workflows/gitlab-com_overview.html.md.erb
@@ -59,11 +59,10 @@ In situations where [proof of account ownership is required](account_verificatio
 
 A user is considered an enterprise user when:
 
-1. The user's email has a domain that is owned by the company of the paid group, _and_
-1. The user account meets _one of_ the following conditions:
+1. The user has a `provisioned_by_group_id` value that is the same as the organization's group's ID, _or_
+1. The user's email has a domain that is owned by the company of the paid group, _and_ the user account meets _one of_ the following conditions:
     - was created 2021-02-01 or later.
     - has a SAML or SCIM identity tied to the organization's group.
-    - has a `provisioned_by_group_id` value that is the same as the organization's group's ID.
     - is a member of the organization's group, where the subscription was purchased or renewed 2021-02-01 or later.
 
 Note: This means that the user's primary email _must_ be in the company domain, but it need not be a member of the paid group, as that is only one of the possible conditions.
