Rename PTO by Roots to PTO by Deel

--- a/development/dev/create/_calendars.erb
+++ b/development/dev/create/_calendars.erb
@@ -14,7 +14,7 @@ Calendars are used to communicate important events:
 
 [Learn more][calendar]
 
-## PTO by Roots
-The PTO by Roots communicates your Out of Office events.
+## PTO by Deel
+The PTO by Deel communicates your Out of Office events.
 
 [Learn more][pto-root]
