--- a/development/dev/create/editor/index.html.md.erb
+++ b/development/dev/create/editor/index.html.md.erb
@@ -322,7 +322,7 @@ We on the Editor team weight issues by leveraging the [Fibonacci Sequence](https
 
 #### Time Off
 
-Team members should add any [planned time off](/handbook/paid-time-off/#paid-time-off) in the ["PTO by Roots"](https://gitlab.slack.com/archives/D019WTM2F99) slack app, so that the Engineering Manager can use the proper number of days off during capacity planning.
+Team members should add any [planned time off](/handbook/paid-time-off/#paid-time-off) in the ["PTO by Deel"](https://gitlab.slack.com/archives/D019WTM2F99) slack app, so that the Engineering Manager can use the proper number of days off during capacity planning.
 
 <%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: "Editor" } %>
 
