--- a/development/dev/manage/integrations/index.html.md.erb
+++ b/development/dev/manage/integrations/index.html.md.erb
@@ -82,7 +82,7 @@ We follow this process:
 
 We use [Google Apps Script](https://script.google.com/home/projects/1cH4Hrv03Kf_dlqPyxPdoyxWcV_x2d2u2PKNnGP_YwNjGifjcD4c29GKJ/edit)
 to estimate capacity. For more accurate [capacity planning](/handbook/engineering/development/dev/manage/integrations/#capacity-planning),
-engineers have to report their time off using PTO by Roots before the beginning
+engineers have to report their time off using PTO by Deel before the beginning
 of the milestone.
 
 ### What to work on
