--- a/development/ops/monitor/respond/index.html.md.erb
+++ b/development/ops/monitor/respond/index.html.md.erb
@@ -668,7 +668,7 @@ The Respond team uses labels for issue tracking and to organize issue boards.  M
 In our group, the (frontend + backend) engineering managers are responsible for adding the `~deliverable` label to any issues that the team is publicly stating that to the best of their ability, they expect that issue to be completed in that milestone. We are not perfect but our goal is that 100% of the issues with that label do ship in the release that they are scheduled in. This allows engineering to share what issues they commit to and helps set expectations for the product manager and for the community.
 
 ## Respond PTO
-Just like the rest of the company, we use [PTO by Roots](/handbook/paid-time-off/#pto-by-roots) to track when team members are traveling, attending conferences, and taking time off. The easiest way to see who has upcoming PTO is to run the `/pto-roots whosout` command in the `#g_respond_standup` slack channel. This will show you the upcoming PTO for everyone in that channel.
+Just like the rest of the company, we use [PTO by Deel](/handbook/paid-time-off/#pto-by-deel) to track when team members are traveling, attending conferences, and taking time off. The easiest way to see who has upcoming PTO is to run the `/pto-deel whosout` command in the `#g_respond_standup` slack channel. This will show you the upcoming PTO for everyone in that channel.
 
 ## Reading list
 
