--- a/development/ops/release/index.html.md.erb
+++ b/development/ops/release/index.html.md.erb
@@ -211,9 +211,9 @@ The **Weekly Status Update** is configured to run at noon on Fridays, and contai
 
 #### Taking Time Off
 When going out of office (OOO), be sure to clearly communicate it with other people. 
-1. In [PTO by Roots](/handbook/paid-time-off/#pto-by-roots), set a role for your backup person during your PTO. If you will be out for an extended period (greater than two days), 
+1. In [PTO by Deel](/handbook/paid-time-off/#pto-by-deel), set a role for your backup person during your PTO. If you will be out for an extended period (greater than two days), 
 consider assigning the team slack channel `#s_release` as your backup to help distribute the workload. 
-1. Add the [Release Shared Calendar](https://calendar.google.com/calendar/u/0/embed?src=gitlab.com_8josslksslj9avafu2p77csbkc@group.calendar.google.com&ctz=America/Chicago) to your PTO by Roots settings so your PTO events are visible to everyone in the team. The calendar ID is: `gitlab.com_8josslksslj9avafu2p77csbkc@group.calendar.google.com`
+1. Add the [Release Shared Calendar](https://calendar.google.com/calendar/u/0/embed?src=gitlab.com_8josslksslj9avafu2p77csbkc@group.calendar.google.com&ctz=America/Chicago) to your PTO by Deel settings so your PTO events are visible to everyone in the team. The calendar ID is: `gitlab.com_8josslksslj9avafu2p77csbkc@group.calendar.google.com`
 Read more in the [Paid time off](/handbook/paid-time-off/#a-gitlab-team-members-guide-to-time-off) page.
 
 #### Personal Growth Day (Pilot)
