--- a/development/ops/verify/pipeline-authoring/index.html.md.erb
+++ b/development/ops/verify/pipeline-authoring/index.html.md.erb
@@ -516,7 +516,7 @@ Engineering teams should inform the product manager and EMs if there isn't enoug
 
 #### Shared Team Calendar
 
-The Pipeline Authoring team has a shared calendar that integrates with the [`#g_pipeline-authoring`](https://gitlab.slack.com/archives/C019R5JD44E) Slack channel to inform the team of important dates from PTO Roots.  Instructions on how
+The Pipeline Authoring team has a shared calendar that integrates with the [`#g_pipeline-authoring`](https://gitlab.slack.com/archives/C019R5JD44E) Slack channel to inform the team of important dates from PTO by Deel.  Instructions on how
 to integrate with the `Verify:Pipeline Authoring` calendar can be found [here](https://gitlab.com/gitlab-org/ci-cd/pipeline-authoring/-/issues/28).
 
 ## Developer Onboarding
