--- a/development/processes/Infra-Dev-Escalation/process.html.md.erb
+++ b/development/processes/Infra-Dev-Escalation/process.html.md.erb
@@ -298,7 +298,7 @@ For those eligible engineers, everyone is encouraged to explore options that wor
    1. When an engineer is in standby mode (e.g. not paged) during the weekend shift, they can take 1.25x time-off.
    1. When an engineer is in call-back mode (e.g. being paged) during the weekend shift, they can take double the time-off.
    1. For those who reside in Australia, please refer to these [guidelines of time in lieu](/handbook/total-rewards/benefits/general-and-entity-benefits/pty-benefits-australia/#on-call-engineering-only) in the handbook.
-   1. Please create an OOO event in PTO by Roots and choose **On-Call Time in Lieu**.
+   1. Please create an OOO event in PTO by Deel and choose **On-Call Time in Lieu**.
 1. Other alternatives that promote work-life balance and have the least impact to your personal schedule.
 
 With the above alternatives we want to make sure we comply with local labor laws and not surpass the restricted weekly working hours (ranging from 38 to 60 hours) and offer enough rest time for the engineers who sign up on weekend on-call shifts.
