Rename PTO by Roots to PTO by Deel

--- a/people-policies/leave-of-absence/us/index.html.md.erb
+++ b/people-policies/leave-of-absence/us/index.html.md.erb
@@ -289,7 +289,7 @@ During a military leave of less than 31 days, a team member is entitled to conti
 
 Team members needing **3 or more consecutive business days** away from work due to Military Service are expected to provide GitLab with as much advance notice as possible. In some instances providing advance notice may not be possible, so we ask team members to notify us as soon as they are able.
 
-Team Members should report their Military Service in PTO by Roots by selecting the `Mandatory Civilian Service` option.
+Team Members should report their Military Service in PTO by Deel by selecting the `Mandatory Civilian Service` option.
 
 * Note: For absences resulting in more than 3 consecutive business days away from work, team members will need to provide a copy of your orders as soon as you receive them. Please email your orders to leaves@gitlab.com.
 
