--- a/people-policies/leave-of-absence/index.html.md.erb
+++ b/people-policies/leave-of-absence/index.html.md.erb
@@ -78,7 +78,7 @@ When team members return from military service, they will be entitled to return 
 
 #### How to Apply for Military Leave
 
-Team members should first review their own country's Military Leave policies to ensure they are reporting their leave in accordance with any reporting requirements. Whenever possible team members need to provide at least 30 days advanced notice by selecting `Mandatory Civilian Service` in PTO by Roots. GitLab reserves the right to request documentation related to the team member's Military service. The Absence Management Team will contact you if documentation is needed.  
+Team members should first review their own country's Military Leave policies to ensure they are reporting their leave in accordance with any reporting requirements. Whenever possible team members need to provide at least 30 days advanced notice by selecting `Mandatory Civilian Service` in PTO by Deel. GitLab reserves the right to request documentation related to the team member's Military service. The Absence Management Team will contact you if documentation is needed.  
 
 - For any questions about how to initiate a military leave or requests for reinstatement, please contact the Absence Management team (`leaves@gitlab.com`). For GitLab Inc or GitLab Federal team members, please additionally review the [Military Leave](/handbook/people-policies/leave-of-absence/us/#military-leave) policy.
 
@@ -101,7 +101,7 @@ Managers may deny this request if a team member does not meet these requirements
 * The team member should confirm their intent to return to work at least 2 weeks prior to their return to work date. 
 * Vesting and company-sponsored benefits will be paused as soon as this leave is approved.
     - Vesting and benefits will be reinstated effective the date the team member returns to work.
-* Time away should be categorized as `Vacation` in PTO by Roots.
+* Time away should be categorized as `Vacation` in PTO by Deel.
 
 ### Admin Steps:
 #### Managers, please follow these steps to process a Personal leave request: 
