Rename PTO by Roots to PTO by Deel

--- a/finance/timekeeping/frequently-asked-questions/index.html.md.erb
+++ b/finance/timekeeping/frequently-asked-questions/index.html.md.erb
@@ -41,7 +41,7 @@ Working overtime without prior authorization may result in disciplinary action. 
 
 ### Do I still need to track my time off as outlined by our PTO policy?
 
-In addition to continuing to submit your OOO through PTO by Roots, you must also log certain types of OOO in the ADP Timekeeping system, as listed in the GitLab Non-Exempt & Time and Attendance training. Team members who are taking time off during the day must not record more than 8 hours total of time worked and paid time off.
+In addition to continuing to submit your OOO through PTO by Deel, you must also log certain types of OOO in the ADP Timekeeping system, as listed in the GitLab Non-Exempt & Time and Attendance training. Team members who are taking time off during the day must not record more than 8 hours total of time worked and paid time off.
 
 ### Do team members need to record and be paid for time worked during off hours?
 
