Fixes minor typo

--- a/development/dev/create/index.html.md.erb
+++ b/development/dev/create/index.html.md.erb
@@ -62,7 +62,7 @@ Each team member is encouraged to take positive steps towards **improving their 
 
 **Growing your skillset** will lead to more insightful contributions to the GitLab Product. As your expertise grows, your impact on the product and the company also grows. Here at GitLab, it is important to us to invest in the Professional Development of our team members.
 
-If there is an area you are intereted in learning more about, please reach out to your manager so they can provide an environment that will allow you to grow in your areas of preference. Some recommended resources are below:
+If there is an area you are interested in learning more about, please reach out to your manager so they can provide an environment that will allow you to grow in your areas of preference. Some recommended resources are below:
 
 **Engineering Managers**
 
