--- a/infrastructure/team/reliability/datastores-postgres.html.md.erb
+++ b/infrastructure/team/reliability/datastores-postgres.html.md.erb
@@ -1,5 +1,13 @@
 ## Mission
-To support, maintain, and improve services related to our [PostgreSQL datastores](https://about.gitlab.com/handbook/engineering/infrastructure/production/architecture/#database-architecture).
+The Datastores::Postgres team at GitLab mission is to Build, Run and Own the entire lifecycle of the PostgreSQL database engine for GitLab.com.
+
+The team is focused on owning the reliability, scalability, performance & security of the database engine and it's supporting services.
+
+The team should be seeking to build their services on top of [Reliability::Foundations](/handbook/engineering/infrastructure/team/reliability/foundations.html) services and cloud vendor managed products, where appropriate, to reduce complexity, improve efficiency and deliver new capabilities quicker.
+
+The team uses [Engineering Principals](/handbook/engineering/development/principles/) to guide the decisions it makes for it's services.
+
+The team does not explicitly have any self hosted product responsibilities but we should contribute the lessons we learn running the database engine for GitLab at scale in production  back to the Product, Development & Support teams to improve overall customer experience with GitLab, as well as collaborating with the Support teams when self managed customers encounter complex database engine issues.
 
 ## Vision
 In support of our mission we'll increase the amount of orchestration and automation used in order to reduce toil and make projects more [boring](https://about.gitlab.com/handbook/teamops/decision-velocity/#boring-solutions).
