--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -85,8 +85,8 @@ We maintain a single source of truth epic for all work underway for the Reliabil
     * [Security Patching](https://gitlab.com/gitlab-com/gl-infra/production/-/issues/6605)
     * [General Requests from the backlog](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/592) that DO NOT require a dedicated project squad.
      
-##### [Datastores::Postgres Team](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/datastores-postgres.html)
-The Datastores::Postgres Team is responsible for the PostgreSQL engine for GitLab.com services, as well as a range of related systems which help to ensure the availability and reliability of the database engine. 
+##### [Database Reliability](/handbook/engineering/infrastructure/team/reliability/database-reliability.html)
+The Database Reliability Team is responsible for the PostgreSQL engine for GitLab.com services, as well as a range of related systems which help to ensure the availability and reliability of the database engine. 
 
 ##### Standing Squad Membership Duration
   * Minimum of 2 quarters 
