rename DB team page

--- a/infrastructure/team/reliability/database-reliability.html.md.erb
+++ b/infrastructure/team/reliability/database-reliability.html.md.erb
@@ -1,5 +1,5 @@
 ## Mission
-The Datastores::Postgres team at GitLab mission is to Build, Run and Own the entire lifecycle of the PostgreSQL database engine for GitLab.com.
+The Database Reliability team at GitLab mission is to Build, Run and Own the entire lifecycle of the PostgreSQL database engine for GitLab.com.
 
 The team is focused on owning the reliability, scalability, performance & security of the database engine and it's supporting services.
 
@@ -10,7 +10,7 @@ The team uses [Engineering Principals](/handbook/engineering/development/princip
 The team does not explicitly have any self hosted product responsibilities but we should contribute the lessons we learn running the database engine for GitLab at scale in production  back to the Product, Development & Support teams to improve overall customer experience with GitLab, as well as collaborating with the Support teams when self managed customers encounter complex database engine issues.
 
 ## Vision
-In support of our mission we'll increase the amount of orchestration and automation used in order to reduce toil and make projects more [boring](https://about.gitlab.com/handbook/teamops/decision-velocity/#boring-solutions).
+
 
 ## Ownership
 
@@ -39,10 +39,10 @@ The signals we use to know that we are achieving our mission:
 TBD
 
 ## Key Technical Skills
-The team is comprised of DBREs predominantly, with one to two SREs. So while the key technical skills differ between roles to some extent, there are a common set of skills which both roles require, to differing levels:
-  * Experience supporting PostgreSQL in large production environments.
-  * Infrastucture automation and configuration management using tools such as Chef, Ansible, Terraform, etc.
-  * Knowledge of PostgreSQL internals, SQL and PL/pgSQL.
+The team is comprised of DBREs with varying levels of expertise in:
+  * Supporting PostgreSQL in large production environments.
+  * Infrastucture automation and configuration management, using tools such as Chef, Ansible, Terraform, etc.
+  * PostgreSQL internals, tuning & optimization, SQL and PL/pgSQL.
 
 ## Common Links
 * Team backlog: https://gitlab.com/gitlab-com/gl-infra/reliability/-/milestones/95#tab-issues 
