--- a/product/ux/product-designer/index.html.md.erb
+++ b/product/ux/product-designer/index.html.md.erb
@@ -57,7 +57,24 @@ See also [How we use labels](/handbook/product/ux/ux-department-workflow/#how-we
 
 #### Engagement with Single Engineer Groups (SEGs)
 
-The [Incubation Engineering Department](https://about.gitlab.com/handbook/engineering/incubation/) utilizes a Single Engineer Group (SEG) to work on "new market" efforts with a directive to move fast, ship, get feedback, and iterate. Occasionally, SEG efforts touch high-usage areas of our product (such as the Issue and MR views), and these engineers will request temporary design support (through the Product Design Manager) to drive the experience direction. Product Designers and their managers should feel comfortable performing in-depth design critiques like they do for their Product Design peers. The goal is for UX to closely collaborate with Incubation Engineering to ensure a great experience for our users.
+The [Incubation Engineering Department](https://about.gitlab.com/handbook/engineering/incubation/) utilizes a Single Engineer Group (SEG) to work on "new market" efforts with a directive to move fast, ship, get feedback, and iterate. Occasionally, SEG efforts touch high-usage areas of our product (such as the Issue and MR views), and these engineers will request temporary design support (through the Product Design Manager) to drive the experience direction.
+
+Product Designers and their managers should feel comfortable performing in-depth design critiques in issues and as part of MR reviews like they do for their Product Design peers. The goal is for UX to closely collaborate with Incubation Engineering to ensure a great experience for our users.
+
+**Design reviews/critiques**
+
+The SEG is responsible for [the design ideation](/handbook/product/ux/product-designer/#ideate-and-iterate) of their focus. Product Designers are not responsible for solving the customer problem or putting together design assets for the SEG.
+
+However, if an SEG would like a Product Designer to review and provide feedback (at any phase--early ideations, wireframes, high fidelity mockups, and so on) they can reach out to the [Product Design Manager of the stage group/area of the product](/handbook/product/categories/) it likely impacts. It can sometimes be a challenge to know what group but any Product Design Manager can help you get in touch with the right designer.
+
+Ideally, SEGs will give advance notice of when a design review is needed. It is best to let the Product Design Manager know as early as possible for better planning and capacity management of their teams.
+
+**Reviewing SEG merge requests**
+
+All MRs with user-facing changes gets a review from a designer. For SEGs, we treat them similarly to [community contributions](/handbook/product/ux/product-designer/mr-reviews/#community-contributions), in that we want the designer closest to the area to work with the SEG as they will be deeply versed in our existing product.
+
+In some cases, the SEG focuses on new areas of the product that doesn't have a direct impact on current stage group experiences. In these cases, we utilize the [GitLab Roulette](https://gitlab-org.gitlab.io/gitlab-roulette/) automation to help assign a Product Designer to an MR for review. The automation occurs when adding the `UX` label to the MR.
+
 
 ### UX Issue Weights
 
