Update Acquisition workflow to reflect workflow changes

--- a/development/growth/acquisition/index.html.md.erb
+++ b/development/growth/acquisition/index.html.md.erb
@@ -59,17 +59,18 @@ Prioritization is a collaboration between Product, UX, Engineering, and Quality.
 * We use the [ICE framework](/direction/growth/#growth-ideation-and-prioritization) for experiments
 * We use [Priority](https://docs.gitlab.com/ee/development/contributing/issue_workflow.html#priority-labels)
   and [Severity](https://docs.gitlab.com/ee/development/contributing/issue_workflow.html#severity-labels) labels for bugs
-* We use [planning issues](https://gitlab.com/gitlab-org/growth/team-tasks/-/issues/?sort=created_date&state=all&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aacquisition&first_page_size=20) to discuss work for upcoming milestones
 
 <%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: "Acquisition" } %>
 
 ### Workflow
 
-We use the [Product Development workflow](/handbook/product-development-flow/) when working on issues and
+* We use the [Product Development workflow](/handbook/product-development-flow/) when working on issues and
 merge requests across multiple projects.
 
-We use the Acquisition development [workflow board](https://gitlab.com/groups/gitlab-org/-/boards/1506701?milestone_title=Any%20Milestone&label_name%5B%5D=group%3A%3Aacquisition)
-for work in the build phase of the product development flow.
+* We use a shared [Kanban workflow board](https://gitlab.com/groups/gitlab-org/-/boards/4152639) for both groups - Acquisition and Activation
+for work in the [build phase](https://about.gitlab.com/handbook/product-development-flow/#build-track) of the product development flow.
+
+* We use [refinement threads](https://gitlab.com/gitlab-org/gitlab/-/issues/383859#note_1231645373) on issues to discuss our approach and estimate weight of upcoming work.
 
 ## Common Links
 
