Initial checklist for Partial Issue Triage

--- a/development/sec/secure/static-analysis/index.html.md.erb
+++ b/development/sec/secure/static-analysis/index.html.md.erb
@@ -140,7 +140,7 @@ For instance, the Product Manager should be part of any decision to reorder prio
 ### MoSCoW Process
 
 The team aims for a regular cadence of backlog refinement with minimal overhead. One of the approaches we use to eliminate stale issues
-is our asynchronous [MoSCoW](https://airfocus.com/glossary/what-is-moscow-prioritization/) prioritization process. 
+is our asynchronous [MoSCoW](https://airfocus.com/glossary/what-is-moscow-prioritization/) prioritization process.
 
 The goal is to determine what should be closed out of the backlog as "wont do." This is not an attempt to weight issues, which comes later after we have determined
 whether the goals of the issue are worth pursuing.
@@ -225,8 +225,7 @@ the [Engineering Security instructions](/handbook/security/#creating-new-securit
 #### SLO by Vulnerability Severity
 
 When triaging `Unknown` vulnerabilities, they should be assigned a proper severity as a means to decide the
-priority they should receive to be resolved. The corresponding priority is taken from [Triage levels
-Priority](../../../quality/issue-triage/#triage-levels).
+priority they should receive to be resolved. The corresponding priority is taken from [issue triage](/handbook/engineering/quality/issue-triage/#priority).
 
 | Target                     | Unknown | Critical     | High         | Medium       | Low          |
 |----------------------------|:------:|:------------:|:------------:|:------------:|:------------:|
