Initial checklist for Partial Issue Triage

--- a/product/ux/ux-department-workflow/index.html.md.erb
+++ b/product/ux/ux-department-workflow/index.html.md.erb
@@ -38,7 +38,7 @@ Milestones (product releases) are one of our [planning horizons](/handbook/produ
 
 We use [type labels](/handbook/engineering/metrics/#work-type-classification) to track: feature, maintenance, and bug issues and MRs. UX Leadership actively participates in influencing the prioritization of all three work types.
 
-Product Designers continuously leverage the [triage process](/handbook/engineering/quality/issue-triage/#triage-levels) to ensure issues are properly labeled in order to make it easier to identify priority issues. 
+Product Designers continuously leverage the [triage process](/handbook/engineering/quality/issue-triage) to ensure issues are properly labeled in order to make it easier to identify priority issues.
 
 UX is a stable counterpart when it comes to [quad milestone planning](/handbook/engineering/quality/quality-engineering/quad-planning/). This means that Product Designers and Product Design Managers are active participants in the milestone planning process. Product Designers, with help from their managers, should understand how their Group plans the work for the milestone and should share feedback regularly to influence the issues selected. While UX/Product Design is not a DRI for any of the above work types, they can have a big influence regardless. Here are some examples:
 * The Product Designer sees that there are several UX bugs that have not been resolved and that the Group has been focused on Features and Maintenance. They share this information during the next planning phase and suggest that Bug work types, including UX bugs, get prioritized.
