Link support groups to filtered member lists

--- a/support/index.html.md.erb
+++ b/support/index.html.md.erb
@@ -239,17 +239,19 @@ GitLab.com.
 
 | Group | Who |
 | ----- | --- |
-| [@gitlab-com/support](https://gitlab.com/gitlab-com/support) | All Support Team members |
-| [@gitlab-com/support/amer](https://gitlab.com/gitlab-com/support/amer) | AMER Support |
-| [@gitlab-com/support/apac](https://gitlab.com/gitlab-com/support/apac) | APAC Support |
-| [@gitlab-com/support/emea](https://gitlab.com/gitlab-com/support/emea) | EMEA Support |
-| [@gitlab-com/support/dotcom](https://gitlab.com/gitlab-com/support/dotcom) | Support members with primary SaaS focus and GitLab.com admin access |
-| [@gitlab-com/support/dotcom/console](https://gitlab.com/gitlab-com/support/dotcom/console) | Support members with GitLab.com console access |
-| [@gitlab-com/support/customers-console](https://gitlab.com/gitlab-com/support/customers-console) | Support members with CustomersDot console access |
-| [@gitlab-com/support/licensing-subscription](https://gitlab.com/gitlab-com/support/licensing-subscription) | Support members focused on License and Renewals |
-| [@gitlab-com/support/managers](https://gitlab.com/gitlab-com/support/managers) | All support managers |
-| [@gitlab-com/support/managers/amer](https://gitlab.com/gitlab-com/support/managers/amer) | All AMER support managers |
-| [@gitlab-com/support/managers/apac](https://gitlab.com/gitlab-com/support/managers/apac) | All APAC support managers |
+| [@gitlab-com/support](https://gitlab.com/groups/gitlab-com/support/-/group_members?with_inherited_permissions=exclude&sort=last_joined) | All Support Team members |
+| [@gitlab-com/support/amer](https://gitlab.com/groups/gitlab-com/support/amer/-/group_members?with_inherited_permissions=exclude&sort=last_joined) | AMER Support |
+| [@gitlab-com/support/apac](https://gitlab.com/groups/gitlab-com/support/apac/-/group_members?with_inherited_permissions=exclude&sort=last_joined) | APAC Support |
+| [@gitlab-com/support/emea](https://gitlab.com/groups/gitlab-com/support/emea/-/group_members?with_inherited_permissions=exclude&sort=last_joined) | EMEA Support |
+| [@gitlab-com/support/dotcom](https://gitlab.com/groups/gitlab-com/support/dotcom/-/group_members?with_inherited_permissions=exclude&sort=last_joined) | Support members with primary SaaS focus and GitLab.com admin access |
+| [@gitlab-com/support/dotcom/console](https://gitlab.com/groups/gitlab-com/support/dotcom/console/-/group_members?with_inherited_permissions=exclude&sort=last_joined) | Support members with GitLab.com console access |
+| [@gitlab-com/support/customers-console](https://gitlab.com/groups/gitlab-com/support/customers-console/-/group_members?with_inherited_permissions=exclude&sort=last_joined) | Support members with CustomersDot console access |
+| [@gitlab-com/support/licensing-subscription](https://gitlab.com/groups/gitlab-com/support/licensing-subscription/-/group_members?with_inherited_permissions=exclude&sort=last_joined) | Support members focused on License and Renewals |
+| [@gitlab-com/support/managers](https://gitlab.com/groups/gitlab-com/support/managers/-/group_members?with_inherited_permissions=exclude&sort=recent_last_activity) | All support managers |
+| [@gitlab-com/support/managers/amer](https://gitlab.com/groups/gitlab-com/support/managers/amer/-/group_members?with_inherited_permissions=exclude&sort=recent_last_activity) | All AMER support managers |
+| [@gitlab-com/support/managers/apac](https://gitlab.com/groups/gitlab-com/support/managers/apac/-/group_members?with_inherited_permissions=exclude&sort=recent_last_activity) | All APAC support managers |
+| [@gitlab-com/support/managers/emea](https://gitlab.com/groups/gitlab-com/support/managers/emea-managers/-/group_members?with_inherited_permissions=exclude&sort=recent_last_activity) | All EMEA support managers |
+
 
 #### Projects
 {: .no_toc}
