--- a/development/growth/index.html.md.erb
+++ b/development/growth/index.html.md.erb
@@ -29,7 +29,7 @@ Teams focus on validating ideas with data and provide development input into two
 - [Continuous onboarding](https://gitlab.com/gitlab-org/gitlab/-/issues/323176)
 
 We work on the issues prioritized by our product teams including running [experiments](/handbook/engineering/development/growth/experimentation/) on GitLab.com.
-More information on priorities can be found on the [Growth direction](/direction/growth/) page.
+More information on priorities can be found on the [Growth direction](/handbook/marketing/growth/) page.
 
 Growth stage teams have Fullstack Engineers.
 The reason for this is that the Growth stage has a need for both Frontend and Backend skill-sets,
@@ -37,7 +37,7 @@ but as a small team, has optimized for team member efficiency to adopt the Fulls
 
 Some useful links to see how and what we are working on include:
 
-- [Growth direction](/direction/growth/)
+- [Growth direction](/handbook/marketing/growth/)
 - [Growth group issues](https://gitlab.com/groups/gitlab-org/-/boards/1392106?&label_name%5B%5D=devops%3A%3Agrowth)
 - [Experimentation](experimentation/)
 - [GLEX](https://gitlab.com/gitlab-org/ruby/gems/gitlab-experiment)
