--- a/development/growth/activation/index.html.md.erb
+++ b/development/growth/activation/index.html.md.erb
@@ -12,7 +12,7 @@ description: "The Growth:Activation group works on feature enhancements and grow
 
 ## Vision
 
-The Activation Group is part of the [Growth Stage]. We work on [connecting our users with our product value](/direction/growth/).
+The Activation Group is part of the [Growth Stage]. We work on [connecting our users with our product value](/handbook/marketing/growth/).
 
 * I have a question. Who do I ask?
 
@@ -55,7 +55,7 @@ stable_counterparts(role_regexp: roles_regexp, direct_manager_role: direct_manag
 
 Prioritization is a collaboration between Product, UX, and Engineering.
 
-* We use the [ICE framework](/direction/growth/#growth-ideation-and-prioritization) for experiments.
+* We use the [ICE framework](/handbook/marketing/growth/) for experiments.
 * We use [Priority](https://docs.gitlab.com/ee/development/contributing/issue_workflow.html#priority-labels)
   and [Severity](https://docs.gitlab.com/ee/development/contributing/issue_workflow.html#severity-labels) labels for bugs.
 
