Cleanse irrelevant in redirects.yml

--- a/finance/accounting/index.html.md.erb
+++ b/finance/accounting/index.html.md.erb
@@ -550,7 +550,7 @@ Please review this [page](https://about.gitlab.com/handbook/finance/accounts-pay
 
 #### Marketing Campaign Expenses
 
-Please see the [campaign expense guidelines in the Marketing handbook](/handbook/marketing/marketing-sales-development/marketing-operations/#campaign-cost-tracking).
+Please see the [campaign expense guidelines in the Marketing handbook](/handbook/marketing/marketing-operations/).
 
 #### GitLab Contribute Cost Tracking
 (Previously GitLab Summit)
