Add QE Distribution documentation

--- a/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
@@ -44,7 +44,7 @@ Quality Engineering Manager: Kassandra Svoboda
 | 3    	| [SaaS Platforms]  | [GitLab Dedicated]             | TBH                                                                     |
 | 4    	| [SaaS Platforms]  | [US Public Sector Services]    | Andy Hohenner                                                                     |
 
-## OKRs 
+## OKRs
 
 Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates automatically as the quarter progresses.
 
@@ -84,6 +84,13 @@ Technical Writing, which focuses on the following:
 For more information, please see the [Self-Managed Environment Triage board] and
 the [Self-Managed Environment Triage agenda] (internal only). To be added to the
 meetings, please reach out to the Quality Engineering Manager, Enablement.
+
+## Quality process across groups
+
+Overall we follow the same process as [defined](https://about.gitlab.com/handbook/engineering/quality/quality-engineering/#how-we-work) in our Quality handbook across all groups in Enablement
+except for a few exceptions curated to fit the needs of specific groups.
+
+- [Quality Engineering in Distribution group](/handbook/engineering/quality/quality-engineering/enablement-saas-platforms-qe-team/distribution/index.html)
 
 [Enablement section]: /handbook/product/categories/#enablement-section
 [Systems]: /handbook/product/categories/#systems-stage
