Cleanse irrelevant in redirects.yml

--- a/people-group/contracts-probation-periods/index.html.md.erb
+++ b/people-group/contracts-probation-periods/index.html.md.erb
@@ -214,7 +214,7 @@ The Senior Manager, Global Enablement reviews if all Greenhouse tokens are corre
 
 If a team member changes roles at GitLab and the approval goes through Greenhouse, the process for a Letter of Adjustment is laid out in the [Letter of Adjustment](/handbook/hiring/talent-acquisition-framework/ces-contract-processes/#letter-of-adjustment) section on the CES Contract Processes handbook page.
 If a team member changes roles at GitLab and the approval goes through Workday, the process for a Letter of Adjustment is laid out in the [Letter of Adjustment](/handbook/people-group/promotions-transfers/#letter-of-adjustment) section on the Promotions & Transfers handbook page.
-For other instances such as a [Relocation](/handbook/people-group/employment-solutions/#relocation--address-change), the People Connect Team member will create a [Relocation letter](/handbook/people-group/relocation/#tasks-for-people-operations) according to the parameters as listed in the [Relocation within the Same Country](/handbook/people-group/relocation/#tasks-for-people-operations) section on the Relocation handbook page.
+For other instances such as a [Relocation](/handbook/people-group/relocation/), the People Connect Team member will create a [Relocation letter](/handbook/people-group/relocation/#tasks-for-people-operations) according to the parameters as listed in the [Relocation within the Same Country](/handbook/people-group/relocation/#tasks-for-people-operations) section on the Relocation handbook page.
 
 ## Probation Period
 
