--- a/people-group/index.html.md.erb
+++ b/people-group/index.html.md.erb
@@ -117,7 +117,7 @@ Each quarter there's a reminder in the People Group Google Calendar to update th
 Please reach out to your aligned People Business Partner (PBP) to engage in the following areas:
 
 - Career development/[Promotions](/handbook/people-group/promotions-transfers/)
-- [Succession planning](/handbook/people-group/performance-assessments-and-succession-planning/#succession-planning)
+- [Succession planning](/handbook/people-group/talent-assessment/)
 - New organizational structures or re-alignment of team members
 - [Talent Assessment programs](/handbook/people-group/talent-assessment)
 - Team member retention
