Cleanse irrelevant in redirects.yml

--- a/career-development/matrix/engineering/infrastructure/index.html.md.erb
+++ b/career-development/matrix/engineering/infrastructure/index.html.md.erb
@@ -22,7 +22,7 @@ The Infrastructure Department Career Framework consists of three major component
 1. Engineering Function Leadership Competencies
 1. Infrastructure Department Leadership and Technical Competencies
 
-Each of these three components are equally important for team member general professional development at GitLab. It is important to note that performance is measured based on [general guidelines](/handbook/people-group/performance-assessments-and-succession-planning/#measuring-performance) as defined by the People group.
+Each of these three components are equally important for team member general professional development at GitLab. It is important to note that performance is measured based on [general guidelines](/handbook/people-group/talent-assessment/) as defined by the People group.
 
 For each job family, regardless of the level, in the Infrastructure department we are looking to grow team member skills:
 
